--- a/hema.html
+++ b/hema.html
@@ -94,7 +94,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="./image/asif.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./pic.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>HEMANATHAN R</h1>
             <p>Computer Engineer</p>
         </div>
@@ -117,10 +117,13 @@
             <p>I'm a <b>cyber security </b>expert and technology enthusiast who is passionate about helping organizations protect their data and create secure online environments. I'm driven by the desire to put technology to work for the greater good and empower individuals and businesses to benefit from the digital revolution. With over 7 years of experience in the field, I'm dedicated to staying up to date with the latest trends and innovations in the  landscape. I'm also committed to helping others learn more about the importance of online security and how to stay safe online..</p>
         </div>
     </section>
+
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Madras University - Computer Application</p>
+            <p>Madras University  - Computer Application</p>
+            
+            
         </div>
     </section>
 
@@ -128,9 +131,11 @@
         <div class="section-content">
             <h2>Skills</h2>
             <ul>
-                <li>CyberSecurity</li>                
+                <li>CyberSecurity</li>
+                <li>Internet of Things</li>
                 <li>Python</li>
                 <li>IBM cloud</li>
+                <li>ML & AI</li>
                 <li>java</li>
                 <li>c++</li>
                 <li>Java script</li>
@@ -163,7 +168,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 HEMANATHAN R</p>
+        <p>&copy; 2023 HEMANATHAN R</p>
     </footer>
 
     <script>
